--- a/src/app/home/components/house/house.component.html
+++ b/src/app/home/components/house/house.component.html
@@ -8,8 +8,8 @@
 
 <ion-content [ fullscreen ]="true" class ="ion-padding ">
   <ion-grid >
-    <app-house *ngFor ="let item of houses "
+    <app-houseinfos *ngFor ="let item of houses "
       [house]= item>
-    </app-house>
+    </app-houseinfos>
   </ion-grid> 
 </ion-content>
