--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,23 +1,18 @@
-<!--<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title>
+        Houses
+      </ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>-->
-<app-house> </app-house>
-
-
+  
+  <ion-content [fullscreen]="true">
+    <ion-header collapse="condense">
+    </ion-header>
+  
+    <div id="container">
+      <app-houseinfos> </app-houseinfos>
+    </div>
+  </ion-content>
+  
