--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,18 +1,3 @@
-
-  <ion-header [translucent]="true">
-    <ion-toolbar>
-      <ion-title>
-        Houses
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
-  <ion-content [fullscreen]="true">
-    <ion-header collapse="condense">
-    </ion-header>
-  
-    <div id="container">
-      <app-houseinfos> </app-houseinfos>
-    </div>
-  </ion-content>
+<app-house> </app-house>
+ 
   
