--- a/src/app/home/components/houseinfos/houseinfos.component.html
+++ b/src/app/home/components/houseinfos/houseinfos.component.html
@@ -1,9 +1,19 @@
-<ion-row style ="margin-bottom :16 px; align-items : center ">
+<ion-row style ="margin-bottom :16 px; align-items : center" (click)="showDetails()" >
   <ion-col>
-    <ion-label>{{house.price}}</ion-label>
+    <img src={{house.image}} >
+  </ion-col>
+  <ion-col size ="auto">
+    <ion-label>{{house.numero}}</ion-label >
+  </ion-col>
+  <ion-col size ="auto">
+    <ion-label>{{house.housetype}}</ion-label >
   </ion-col>
   <ion-col size ="auto">
     <ion-label>{{house.rooms}}</ion-label >
   </ion-col>
+  <ion-col size ="auto">
+    <ion-label>{{house.price}}</ion-label >
+  </ion-col>
   </ion-row >
-  
+
+
